syntax = "proto3";
package pdytr.grpc;

option java_multiple_files = true;


service FileService {
	rpc WriteFile(stream WriteRequest) returns (WriteResponse) {}
	rpc ReadFile(ReadRequest) returns (ReadResponse) {}
}

message WriteRequest {
	string dest = 2;
	bytes data = 3;
	int32 offset = 4;
}

message WriteResponse {
	int32 bytesWrite = 1;
}

message ReadRequest {
	string src = 1;
	int32 amount = 2;
	int32 offset = 3;
}

message ReadResponse {
	int32 bytesRead = 1;
	bytes data = 2;
}
